# rmr_data_miner

./: .env  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  seed_data.json
backend/src/: http_headers.rs  lib.rs  main.rs
backend/src/api/: connections_api.rs  events_api.rs  mod.rs  stations_api.rs
backend/src/entities/: mod.rs  now_playing_connections.rs  payload_mappings.rs  raw_now_playing_events.rs  stations.rs
backend/src/poller/: mod.rs  utils.rs
frontend/: Dockerfile  package.json
frontend/app/: config.ts  layout.tsx
frontend/app/components/: Layout.tsx
frontend/app/connections/: page.tsx
frontend/app/events/: page.tsx
frontend/app/events/[id]/: page.tsx
frontend/app/mappings/: page.tsx
frontend/app/stations/: page.tsx
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_tables.rs  m20260108_134400_payload_mappings.rs  m20260108_135100_json_mappings.rs  m20260108_141000_station_mappings.rs  m20260108_142300_remove_station_mapping.rs  m20260109_000100_adaptive_polling.rs
